# template-python-package

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
package/: main.py
tests/: test_main.py
