[tool.poetry]
name = "package"
version = "1.2.3"
description = "My super template package"
readme = "README.md"
authors = ["Thomas Chauvet <thomas.chauvet@protonmail.com>"]
homepage = ""
repository = ""

[tool.poetry.scripts]
greet = "package.main:run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
